@@ -107,8 +107,30 @@ AC_TRY_LINK([#ifndef _GNU_SOURCE
             [AC_DEFINE(HAVE_PTSNAME_R, 1,
                      Define to 1 if you have a re-entrant version of ptsname)])
 
-dnl program checks
-AC_CHECK_PROG([HAS_MAKEINFO], [makeinfo], [yes], [no])
+dnl Add support for creating documentation
+dnl
+dnl It enables the use of the makinfo documentation tool to
+dnl create html and pdf documentation for distribution with cgdb
+AC_ARG_ENABLE([docs],
+    [AS_HELP_STRING([--enable-docs], [generate documentation with makeinfo
+    (default yes)])],
+    [case "${enableval}" in
+        yes) enable_docs=yes ;;
+        no)  enable_docs=no ;;
+        *) AC_MSG_ERROR([bad value ${enableval} for --enable-docs, to \
+disable this option use "--disable-docs" or "--enable-docs=no"]) ;;
+         esac],
+    [enable_docs=yes])
+
+if test "$enable_docs" = "yes"; then
+  AC_CHECK_PROG([HAS_MAKEINFO], [makeinfo], [yes], [no])
+fi
+
+dnl Build the documentation if enable docs is true
+AM_CONDITIONAL([WANT_DOCS], [test x$enable_docs = xyes])
+
+
+
 dnl Default variables
 dnl If ncurses is yes after arguments, than use ncurses. Otherwise, use curses
 opt_with_readline_prefix=no
@@ -150,8 +172,10 @@ if test "$LEX" != "flex" -a "$LEX" != "lex"; then
 fi
 
 dnl check that the required tools are available to generate documentation
-if test "$HAS_MAKEINFO" != "yes" ; then
-	AC_MSG_ERROR([Please install makeinfo before installing])
+if test "$enable_docs" = "yes"; then
+    if test "$HAS_MAKEINFO" != "yes" ; then
+        AC_MSG_ERROR([Please install makeinfo before installing])
+    fi
 fi
 
 dnl readline and ncurses/curses configure magic is difficult.
@@ -253,3 +277,29 @@ AC_OUTPUT(
     cgdb/Makefile \
     test/Makefile
 )
+
+# Display configuration options.
+cat <<EOF
+
+$PACKAGE_NAME configuration summary:
+
+    Install prefix ........... : ${prefix}
+
+    flex ..................... : ${LEX}
+
+    C preprocessor ........... : ${CPP}
+    C compiler ............... : ${CC}
+    C++ preprocessor ......... : ${CXXCPP}
+    C++ compiler ............. : ${CXX}
+    Linker ................... : ${LD}
+
+    C preprocessor flags ..... : ${CPPFLAGS}
+    C compiler flags ......... : ${CFLAGS}
+    C++ compiler flags ....... : ${CXXFLAGS}
+    Linker flags ............. : ${LDFLAGS}
+    Extra libraries .......... : ${LIBS}
+
+    Enabled options:
+    --enable-docs ............ : ${enable_docs}
+
+EOF
